--- a/public/index.html
+++ b/public/index.html
@@ -48,3 +48,4 @@
 <script src="/assets/js/animation.js"></script>
 <script src="/assets/js/imagesloaded.js"></script>
 <script src="/assets/js/custom.js"></script>
+<script src="https://use.fontawesome.com/a58effa2c9.js"></script>
