--- a/public/index.html
+++ b/public/index.html
@@ -49,3 +49,4 @@
 <script src="/assets/js/imagesloaded.js"></script>
 <script src="/assets/js/custom.js"></script>
 <script src="https://use.fontawesome.com/a58effa2c9.js"></script>
+<script src="https://kit.fontawesome.com/ef3be96bb3.js" crossorigin="anonymous"></script>
